--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "tgsh.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node tgsh.js"
+    "start": "node app.js"
   },
   "author": "Tiago Ribeiro <tribeiros@indracompany.com> (http://caosfera.com.br/)",
   "license": "MIT",
